Remove some <!nocheck> annotations. Thnaks to gregoa for the patch. (Closes: #954338)

--- a/debian/control
+++ b/debian/control
@@ -39,7 +39,7 @@ Build-Depends:
  libdigest-sha-perl <!nocheck>,
  libdpkg-perl <!nocheck>,
  libemail-valid-perl <!nocheck>,
- libfile-basedir-perl <!nocheck>,
+ libfile-basedir-perl,
  libfile-find-rule-perl <!nocheck>,
  libfont-ttf-perl <!nocheck>,
  libhtml-parser-perl <!nocheck>,
@@ -52,7 +52,7 @@ Build-Depends:
  libmoo-perl <!nocheck>,
  libmoox-aliases-perl <!nocheck>,
  libnamespace-clean-perl <!nocheck>,
- libpath-tiny-perl <!nocheck>,
+ libpath-tiny-perl,
  libpod-coverage-trustpod-perl <!nocheck>,
  libsereal-decoder-perl <!nocheck>,
  libsereal-encoder-perl <!nocheck>,
