--- a/debian/control
+++ b/debian/control
@@ -32,8 +32,10 @@ Build-Depends:
  libapt-pkg-perl <!nocheck>,
  libarchive-zip-perl <!nocheck>,
  libcapture-tiny-perl <!nocheck>,
+# makes Moo faster, https://metacpan.org/pod/Moo#MOO-AND-CLASS::XSACCESSOR
  libclass-xsaccessor-perl <!nocheck>,
  libclone-perl <!nocheck>,
+ libcpanel-json-xs-perl <!nocheck>,
  libdevel-size-perl <!nocheck>,
  libdigest-sha-perl <!nocheck>,
  libdpkg-perl <!nocheck>,
@@ -114,8 +116,10 @@ Depends:
  libapt-pkg-perl,
  libarchive-zip-perl,
  libcapture-tiny-perl,
+# makes Moo faster, https://metacpan.org/pod/Moo#MOO-AND-CLASS::XSACCESSOR
  libclass-xsaccessor-perl,
  libclone-perl,
+ libcpanel-json-xs-perl,
  libdevel-size-perl,
  libdigest-sha-perl,
  libdpkg-perl,
