--- a/t/tags/checks/testsuite/national-encoding/build-spec/debian/tests/control
+++ b/t/tags/checks/testsuite/national-encoding/build-spec/debian/tests/control
@@ -1,5 +1,5 @@
 Tests: test-1
-Comment: Test-1 is Ã¶h so good.
+Comment: Test-1 is öh so good.
  Last paragraph misses a Tests field.
 
 Tests: fifo missing-test under_score
