--- a/t/tags/checks/fields/maintainer/legacy-foo++/build-spec/debian/control
+++ b/t/tags/checks/fields/maintainer/legacy-foo++/build-spec/debian/control
@@ -16,7 +16,7 @@ Description: see how lintian reacts to plus signs in the package name
  Regression test to see if lintian tests work on a package with plus signs in
  its name.
  .
- This description also uses non-UTF8 high bytes chars: ƒ÷‹ﬂ
+ This description also uses non-UTF8 high bytes chars: √Ñ√ñ√ú√ü
 
 Package: foo++-helper
 Architecture: all
