In check debian/changelog, do not analyze changelogs or NEWS files with national encodings.
Makes the check more robust when files are not encoded in UTF-8. Also
provides a new test with national encoding.

This commit is part of a series to improve Unicode handling in Lintian.

Gbp-Dch: ignore

--- a/t/tags/checks/debian/changelog/legacy-foo++/build-spec/debian/changelog.in
+++ b/t/tags/checks/debian/changelog/legacy-foo++/build-spec/debian/changelog.in
@@ -8,7 +8,7 @@ foo++ ([% $version %]) [% $distribution %]; urgency=low
 
 foo++ (4) unstable; urgency=low
 
-  * This changelog now includes a ISO-8859-1 character: 'ä'
+  * This changelog now includes a ISO-8859-1 character: 'Ã¤'
 
  -- Frank Lichtenheld <djpig@debian.org>  Fri,  5 Mar 2004 13:41:39 +0100
 
