In d/control, add libunicode-utf8-perl to Depends.
The module was already listed in Build-Depends.

A corresponding request for lintian.d.o was filed as RT#8221.

--- a/debian/control
+++ b/debian/control
@@ -144,6 +144,7 @@ Depends:
  libtimedate-perl,
  libtry-tiny-perl,
  libtype-tiny-perl,
+ libunicode-utf8-perl,
  liburi-perl,
  libxml-libxml-perl,
  libxml-writer-perl,
