Revert "In d/control, remove libtext-levenshtein-perl from Depends and Build-Depends."
This reverts commit 7cee4aeec16534d92e771b6d6b09abe0ad88c805.

The module is still being used in the debhelper check. It identifies
likely misspellings of debhelper targets. It would probably be better
to do that in debhelper, but we are keeping it for now.

--- a/debian/control
+++ b/debian/control
@@ -67,6 +67,7 @@ Build-Depends:
  libtext-csv-perl <!nocheck>,
  libtext-csv-xs-perl <!nocheck>,
  libtext-diff-perl <!nocheck>,
+ libtext-levenshtein-perl <!nocheck>,
  libtext-template-perl <!nocheck>,
  libtimedate-perl <!nocheck>,
  libtry-tiny-perl <!nocheck>,
@@ -139,6 +140,7 @@ Depends:
  libpath-tiny-perl,
  libsereal-decoder-perl,
  libsereal-encoder-perl,
+ libtext-levenshtein-perl,
  libtimedate-perl,
  libtry-tiny-perl,
  libtype-tiny-perl,
