Switch all checks, tests and tags over to use python3-numpy from the Python 2.x version.
Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/control
+++ b/debian/control
@@ -85,7 +85,7 @@ Build-Depends:
  pkg-php-tools <!nocheck>,
  python2 <!nocheck>,
  python-all-dev <!nocheck>,
- python-numpy <!nocheck>,
+ python3-numpy <!nocheck>,
  python3-docutils,
  quilt <!nocheck>,
  t1utils <!nocheck>,
