Don't add .* to -Wl,--as-needed test. Thanks, Andreas.
Gbp-Dch: ignore

--- a/t/tags/checks/debian/rules/debian-rules-uses-as-needed-linker-flag/build-spec/debian/rules
+++ b/t/tags/checks/debian/rules/debian-rules-uses-as-needed-linker-flag/build-spec/debian/rules
@@ -9,4 +9,4 @@ export DEB_GOODFLAGS_MAINT_APPEND = -lprefix -Wl,--as-needed -Wl,--no-as-needed 
 	dh $@
 
 override_dh_autoreconf:
-	-dh_autoreconf .* --as-needed
+	-dh_autoreconf --as-needed
