In two tests, use dh_install instead of make to avoid error from dh_missing in compat level 13.
In compat level 13, the direct installation from a Makefile triggers
the following error. The install location was off. The purpose of the
static binary was not clear.

Now installs the static binary into the main package.

dh_missing: warning: usr/lib/foo/static exists in debian/tmp but is not installed to anywhere
dh_missing: error: missing files, aborting
	The following debhelper tools have reported what they installed (with files per package)
	 * dh_installdocs: control-file-golang-built-using (0), control-file-golang-built-using-clean-dev (0), control-file-golang-built-using-dev (0)
	If the missing files are installed by another tool, please file a bug against it.
	When filing the report, if the tool is not part of debhelper itself, please reference the
	"Logging helpers and dh_missing" section from the "PROGRAMMING" guide for debhelper (10.6.3+).
	  (in the debhelper package: /usr/share/doc/debhelper/PROGRAMMING.gz)
	Be sure to test with dpkg-buildpackage -A/-B as the results may vary when only a subset is built
	For a short-term work-around: Add the files to debian/not-installed
make[1]: *** [debian/rules:6: binary] Error 25

Also adds Rules-Requires-Root clauses to both control files, and
adjusts the classification tags accordingly.

Gbp-Dch: ignore

--- a/t/tags/checks/debian/control/control-file-golang-built-using/build-spec/orig/Makefile
+++ b/t/tags/checks/debian/control/control-file-golang-built-using/build-spec/orig/Makefile
@@ -4,11 +4,7 @@ COMPILE:= $(CC) $(NOPIE_CFLAGS) $(CPPFLAGS) $(NOPIE_LDFLAGS)
 
 all:
 	# static version
-	$(COMPILE) -static -o basic.static basic.c
-
-install:
-	install -d $(DESTDIR)/usr/lib/foo/
-	install -m 755 basic.static $(DESTDIR)/usr/lib/foo/static
+	$(COMPILE) -static -o static basic.c
 
 clean distclean:
 	rm -f basic
