--- a/t/tags/checks/debian/control/control-file-golang-xs-go-import-path/build-spec/debian/control.in
+++ b/t/tags/checks/debian/control/control-file-golang-xs-go-import-path/build-spec/debian/control.in
@@ -3,6 +3,7 @@ Section: net
 Priority: optional
 Maintainer: [% $author %]
 Standards-Version: [% $standards_version %]
+Rules-Requires-Root: [% $rules_requires_root %]
 Build-Depends: [% $build_depends %],
  golang-go (>= 2:1.1.1-4)
 XS-Go-Import-Path: github.com/Debian/lintian-test-package
