--- a/t/tags/checks/debian/control/control-file-golang-xs-go-import-path/build-spec/orig/Makefile
+++ b/t/tags/checks/debian/control/control-file-golang-xs-go-import-path/build-spec/orig/Makefile
@@ -4,11 +4,7 @@ COMPILE:= $(CC) $(NOPIE_CFLAGS) $(CPPFLAGS) $(NOPIE_LDFLAGS)
 
 all:
 	# static version
-	$(COMPILE) -static -o basic.static basic.c
-
-install:
-	install -d $(DESTDIR)/usr/lib/foo/
-	install -m 755 basic.static $(DESTDIR)/usr/lib/foo/static
+	$(COMPILE) -static -o static basic.c
 
 clean distclean:
 	rm -f basic
