--- a/t/tags/checks/files/names/files-general/build-spec/debian/rules
+++ b/t/tags/checks/files/names/files-general/build-spec/debian/rules
@@ -40,6 +40,7 @@ override_dh_install:
 	touch $(tmp)/usr/share/foo/gschemas.compiled
 	touch $(tmp)/usr/share/glib-2.0/schemas/gschemas.compiled
 	touch $(tmp)/usr/share/hal/foo.fdi
+	touch $(tmp)/usr/share/icons/hicolor/icon-theme.cache
 	touch $(tmp)/usr/lib/python3/dist-packages/test_foo.py
 	touch $(tmp)/usr/lib/python3/dist-packages/foo/test_falsepositive.py
 	# If the following line gets messed up, it can be
