--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,7 @@ variables:
     - tags
   before_script:
     - apt-get -q update
-    - apt-get --quiet install apt-cudf
-    - env DEBIAN_FRONTEND=noninteractive apt-get --quiet --yes --solver aspcud --option dir::cache::archives=".cache" build-dep .
+    - env DEBIAN_FRONTEND=noninteractive apt-get -q -y -o dir::cache::archives=".cache" build-dep .
   script:
     - tar xfJ test-packages.tar.xz
     - time t/bin/runtests
