--- a/man/lintian.pod.in
+++ b/man/lintian.pod.in
@@ -223,6 +223,19 @@ bug reports are always welcome (particularly if they include fixes).
 These options overrides the B<display-experimental> variable in the
 configuration file.
 
+=item B<--fail-on> {error | warning | info | pedantic | experimental | override}
+
+Causes B<lintian> to exit with a program status of 2 for the given
+conditions. This option can be a comma-separated list, or it may be
+specified multiple times.
+
+THERE IS NO DEFAULT, which is different from the way B<lintian> used
+to work. Also, 'warning' does not imply 'error'. Please specify both
+if you want both.
+
+This option overrides the B<fail-on> variable in the configuration
+file.
+
 =item B<-i>, B<--info>
 
 Print explanatory information about each problem discovered in
@@ -694,8 +707,7 @@ A sample configuration file could look like:
 
 =item B<0>
 
-No policy violations or major errors detected.
-(There may have been warnings, though.)
+Normal operation.
 
 =item B<1>
 
@@ -703,7 +715,8 @@ Lintian run-time error. An error message is sent to stderr.
 
 =item B<2>
 
-Policy violations or major errors detected.
+Detected a condition specified via the B<--fail-on> option. This can
+be used to trigger a non-zero exit value in case of policy violations.
 
 =back
 
