In CI pipelines, request more detailed output when installing build prerequisites.
Perhaps this provides information as to why debhelper-compat (= 13)
does not pull in debhelper from buster-backports. Thanks to mapreri
for the suggestion!

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ variables:
     - tags
   before_script:
     - apt-get -q update
-    - env DEBIAN_FRONTEND=noninteractive apt-get -q -y -o dir::cache::archives=".cache" build-dep .
+    - env DEBIAN_FRONTEND=noninteractive apt-get --quiet --yes --option dir::cache::archives=".cache" --option Debug::pkgProblemResolver=yes build-dep .
   script:
     - tar xfJ test-packages.tar.xz
     - time t/bin/runtests
