--- a/man/lintian.pod.in
+++ b/man/lintian.pod.in
@@ -45,9 +45,8 @@ before uploading it.
 If you specify packages to be checked or use the option
 B<--packages-from-file>, the packages requested will be processed.
 Otherwise, if I<debian/changelog> exists, it is parsed to determine
-the name of the .changes file to look for in the parent directory
-(when using the actions B<--check> or B<--unpack>).  See
-L</CHECKING LAST BUILD> for more information.
+the name of the .changes file to look for in the parent directory.
+See L</CHECKING LAST BUILD> for more information.
 
 
 =head1 OPTIONS
@@ -94,14 +93,6 @@ to (potentially) issue.
 
 With this options all tags listed will be displayed regardless of the
 display settings.
-
-=item B<-u>, B<--unpack>
-
-Unpacks the package will all collections.  See the L</COLLECTION>
-section below.
-
-Note in this option will also run all collections.  See the
-L</COLLECTION> section below.
 
 =item B<-X> chk1,chk2,..., B<--dont-check-part> chk1,chk2,...
 
@@ -451,9 +442,8 @@ B<Note>: This option should be the very first if given.
 
 =item B<-j> X, B<--jobs>=X
 
-Set the limit for how many unpacking jobs Lintian will run in
-parallel.  This option overrides the B<jobs> variable in the
-configuration file.
+Set the limit for how many jobs Lintian will run in parallel. This
+option overrides the B<jobs> variable in the configuration file.
 
 By default Lintian will use I<nproc> to determine a reasonable default
 (or 2, if the nproc fails).
@@ -543,20 +533,6 @@ If Lintian should write the output to a file starting with a literal
 "./+my-file").
 
 If this option omitted, Lintian will default to using STDOUT.
-
-=item B<-U> info1,info2,..., B<--unpack-info> info1,info2,...
-
-Collect information info1, info2, etc. even if these are not required
-by the checks.  Collections requested by this option are also not
-auto-removed (in this run).
-
-This option is mostly useful for debugging or special purpose setups.
-
-It is allowed to give this option more than once.  The following
-two lines of arguments are semantically equivalent:
-
- -U info1 -U info2
- -U info1,info2
 
 =back
 
