In d/control, add libemail-address-xs-perl and liblist-utilsby-perl to Depends and Build-Depends.
Together, these modules provide a more concise way to parse lists of
email addresses in fields such as Uploaders. They may even allow a
proper fix for Bug#485705

Email::Address::XS will also be used to parse the Maintainer and
Changed-By fields.

--- a/debian/control
+++ b/debian/control
@@ -40,6 +40,7 @@ Build-Depends:
  libdevel-size-perl <!nocheck>,
  libdigest-sha-perl <!nocheck>,
  libdpkg-perl <!nocheck>,
+ libemail-address-xs-perl <!nocheck>,
  libemail-valid-perl <!nocheck>,
  libfile-basedir-perl,
  libfile-find-rule-perl <!nocheck>,
@@ -50,6 +51,7 @@ Build-Depends:
  libjson-maybexs-perl <!nocheck>,
  liblist-compare-perl <!nocheck>,
  liblist-moreutils-perl <!nocheck>,
+ liblist-utilsby-perl <!nocheck>,
  libmoo-perl <!nocheck>,
  libmoox-aliases-perl <!nocheck>,
  libnamespace-clean-perl <!nocheck>,
@@ -124,6 +126,7 @@ Depends:
  libdevel-size-perl,
  libdigest-sha-perl,
  libdpkg-perl,
+ libemail-address-xs-perl,
  libemail-valid-perl,
  libfile-basedir-perl,
  libfile-find-rule-perl,
@@ -134,6 +137,7 @@ Depends:
  libjson-maybexs-perl,
  liblist-compare-perl,
  liblist-moreutils-perl,
+ liblist-utilsby-perl,
  libmoo-perl,
  libmoox-aliases-perl,
  libnamespace-clean-perl,
