--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,7 @@ Build-Depends:
  dh-elpa <!nocheck> | bash (<< 4.4) <!nocheck>,
  dh-python <!nocheck>,
  dh-runit <!nocheck>,
+ dh-r <!nocheck>,
  diffstat <!nocheck>,
  dpatch <!nocheck>,
  dpkg (>= 1.17.14),
