spelling: sort corrections with a UTF-8 locale
This means that accented characters sort near unaccented ones.

--- a/data/spelling/Makefile
+++ b/data/spelling/Makefile
@@ -2,5 +2,5 @@ sort: sort-corrections sort-corrections-case sort-corrections-multiword
 
 sort-%: %
 	csplit --prefix $<- $< '/^$$/'
-	LC_ALL=en_US sort -u $<-01 | cat $<-00 - > $<
+	LC_ALL=en_US.UTF-8 sort -u $<-01 | cat $<-00 - > $<
 	rm -f $<-0[01]
