Reorder library path in test case for ldd's new --as-needed default; should restore CI pipeline in testing.
Thanks to Myon and deki for suggesting this fix!

Gbp-Dch: ignore

--- a/t/tags/checks/libraries/shared/obsolete/cblas/build-spec/orig/Makefile
+++ b/t/tags/checks/libraries/shared/obsolete/cblas/build-spec/orig/Makefile
@@ -2,7 +2,7 @@ TRIPLET := $(shell dpkg-architecture -qDEB_HOST_MULTIARCH)
 
 all:
 	gcc $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) -fPIC -shared -Wl,-z,defs -Wl,-soname,libcblas.so.1 -o libcblas.so libcblas.c
-	gcc $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) -L. -lcblas -o consumer consumer.c
+	gcc $(CFLAGS) $(CPPFLAGS) $(LDFLAGS) -o consumer consumer.c -L. -lcblas
 
 install:
 	install -d $(DESTDIR)/usr/lib/$(TRIPLET)
