Properly capitalize field name for Multi-Arch in two tests.
For fields in control files, Lintian will soon look at literal names
and pay attention to capitalization. Policy 5.1 permits arbitrary
capitalization, but that complicates the examination of same.

After the switch over, Lintian will not work properly with fields that
do not use title-case.  For example, these two tests stopped working
under the new regime. They are fixed here.

As the following commits will show, enforcing capitalization also
exposed some bugs in Lintian, although the reason is presently
unclear.

Case-invariance for field names may return in a future commit.

Gbp-Dch: ignore

--- a/t/recipes/checks/fields/multi-arch/fields-multi-arch-illegal/build-spec/DEBIAN/control.in
+++ b/t/recipes/checks/fields/multi-arch/fields-multi-arch-illegal/build-spec/DEBIAN/control.in
@@ -1,7 +1,7 @@
 Package: [% $source %]
 Version: [% $version %]
 Architecture: all
-Multi-arch: same
+Multi-Arch: same
 Maintainer: [% $author %]
 Section: [% $section %]
 Priority: optional
