--- a/t/recipes/checks/fields/multi-arch/fields-multi-arch-unknown/build-spec/DEBIAN/control.in
+++ b/t/recipes/checks/fields/multi-arch/fields-multi-arch-unknown/build-spec/DEBIAN/control.in
@@ -1,7 +1,7 @@
 Package: [% $source %]
 Version: [% $version %]
 Architecture: [% $package_architecture %]
-Multi-arch: cheese
+Multi-Arch: cheese
 Maintainer: [% $author %]
 Section: [% $section %]
 Priority: optional
