Add lib{text-xslate,time-duration,time-moment}-perl to Depends and Build-Depends in d/control.
Needed for the new standalone HTML output mode.

--- a/debian/control
+++ b/debian/control
@@ -72,6 +72,9 @@ Build-Depends:
  libtext-diff-perl <!nocheck>,
  libtext-levenshtein-perl <!nocheck>,
  libtext-template-perl <!nocheck>,
+ libtext-xslate-perl <!nocheck>,
+ libtime-duration-perl <!nocheck>,
+ libtime-moment-perl <!nocheck>,
  libtimedate-perl <!nocheck>,
  libtry-tiny-perl <!nocheck>,
  libtype-tiny-perl <!nocheck>,
@@ -146,6 +149,9 @@ Depends:
  libsereal-decoder-perl,
  libsereal-encoder-perl,
  libtext-levenshtein-perl,
+ libtext-xslate-perl,
+ libtime-duration-perl,
+ libtime-moment-perl,
  libtimedate-perl,
  libtry-tiny-perl,
  libtype-tiny-perl,
