--- a/t/recipes/checks/testsuite/missing-tests-control/build-spec/debian/control.in
+++ b/t/recipes/checks/testsuite/missing-tests-control/build-spec/debian/control.in
@@ -1,14 +1,16 @@
 Source: [% $source %]
-Priority: optional
+Priority: [% $priority %]
 Section: [% $section %]
 Maintainer: [% $author %]
 Standards-Version: [% $standards_version %]
 Build-Depends: [% $build_depends %]
-Rules-Requires-Root: no
-Testsuite: autopkgtest, golf
+Rules-Requires-Root: [% $rules_requires_root %]
+Homepage: [% $homepage %]
+Testsuite: autopkgtest
 
 Package: [% $source %]
 Architecture: [% $package_architecture %]
+Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: [% $description %]
  This is a test package designed to exercise some feature or tag of
