In d/control, add libdata-dpath-perl as Depends and Build-Depends.

--- a/debian/control
+++ b/debian/control
@@ -38,6 +38,7 @@ Build-Depends:
  libclone-perl <!nocheck>,
  libconfig-tiny-perl <!nocheck>,
  libcpanel-json-xs-perl <!nocheck>,
+ libdata-dpath-perl <!nocheck>,
  libdata-validate-domain-perl <!nocheck>,
  libdevel-size-perl <!nocheck>,
  libdigest-sha-perl <!nocheck>,
@@ -127,6 +128,7 @@ Depends:
  libclone-perl,
  libconfig-tiny-perl,
  libcpanel-json-xs-perl,
+ libdata-dpath-perl,
  libdata-validate-domain-perl,
  libdevel-size-perl,
  libdigest-sha-perl,
