Use Text::Glob to match globbing patterns to file names in d/copyright.
The old parser for globbing patterns worked fine according to indications.
This just closes a possible source of problems by using the standardized
Perl module Text::Glob.

The copyright check has traditionally been beset with lots of bugs.

The Text::Glob module does exactly what is needed. Additional capabilities
for character classes in square brackets and alternatives in curly braces
were disabled.

Adds libtext-glob-perl to Depends in d/control.

--- a/debian/control
+++ b/debian/control
@@ -61,6 +61,7 @@ Depends:
  libproc-processtable-perl,
  libsereal-decoder-perl,
  libsereal-encoder-perl,
+ libtext-glob-perl,
  libtext-levenshteinxs-perl,
  libtext-xslate-perl,
  libtime-duration-perl,
