In d/control, add lzip to Depends and Build-Depends.
In a strange twist, the presence of this executable was not missed
until now. Due to a particularity in the implementation of safe_qx via
IO::Async, it was not noticed.

Gbp-Dch: ignore

--- a/debian/control
+++ b/debian/control
@@ -85,6 +85,7 @@ Build-Depends:
  libxml-libxml-perl <!nocheck>,
  libxml-writer-perl <!nocheck>,
  libyaml-libyaml-perl <!nocheck>,
+ lzip <!nocheck>,
  man-db <!nocheck>,
  mingw-w64-tools <!nocheck>,
  patchutils <!nocheck>,
@@ -164,6 +165,7 @@ Depends:
  libxml-libxml-perl,
  libxml-writer-perl,
  libyaml-libyaml-perl,
+ lzip,
  man-db,
  patchutils,
  perl,
