Provide safe_qx based on IPC::Run3; add libipc-run3-perl as Depends and Build-Depends in d/control.
Helps with the gradual conversion of Lintian to IPC::Run3.

The test runner will continue to use IO::Async.

Gbp-Dch: ignore

--- a/debian/control
+++ b/debian/control
@@ -50,6 +50,7 @@ Build-Depends:
  libhtml-parser-perl <!nocheck>,
  libio-async-perl <!nocheck>,
  libio-async-loop-epoll-perl <!nocheck>,
+ libipc-run3-perl <!nocheck>,
  libjson-maybexs-perl <!nocheck>,
  liblist-compare-perl <!nocheck>,
  liblist-moreutils-perl <!nocheck>,
@@ -142,6 +143,7 @@ Depends:
  libhtml-parser-perl,
  libio-async-perl,
  libio-async-loop-epoll-perl (>= 0.20),
+ libipc-run3-perl,
  libjson-maybexs-perl,
  liblist-compare-perl,
  liblist-moreutils-perl,
