--- a/debian/rules
+++ b/debian/rules
@@ -34,10 +34,10 @@ override_dh_clean:
 override_dh_install:
 	dh_install -Xdata/README
 # some manual work
+	echo "Setting LINTIAN_VERSION to $(VER)"
 	$(PERL) -p -i -e 's/my \$$LINTIAN_VERSION;/my \$$LINTIAN_VERSION = q{$(VER)};/;' \
 	     -e 's@my \$$INIT_ROOT(\s*=.*)?;@my \$$INIT_ROOT = q{/usr/share/lintian};@;' \
 	    $(tmp)/usr/share/lintian/frontend/lintian
-	$(tmp)/usr/share/lintian/frontend/lintian --print-version
 	install -m 644 doc/lintianrc.example $(tmp)/etc/lintianrc
 
 profiles: $(profiles);
