--- a/debian/control
+++ b/debian/control
@@ -74,7 +74,7 @@ Depends:
  libxml-libxml-perl,
  libxml-writer-perl,
  libyaml-libyaml-perl,
- lzip,
+ lzip | clzip,
  man-db,
  patchutils,
  perl,
