--- a/debian/rules
+++ b/debian/rules
@@ -37,6 +37,10 @@ override_dh_install:
 	echo "Setting LINTIAN_VERSION to $(VER)"
 	$(PERL) -p -i -e 's/my \$$LINTIAN_VERSION;/my \$$LINTIAN_VERSION = q{$(VER)};/;' \
 	    $(tmp)/usr/share/lintian/bin/lintian
+	$(PERL) -p -i -e 's/my \$$LINTIAN_VERSION;/my \$$LINTIAN_VERSION = q{$(VER)};/;' \
+	    $(tmp)/usr/share/lintian/bin/lintian-info
+	$(PERL) -p -i -e 's/my \$$LINTIAN_VERSION;/my \$$LINTIAN_VERSION = q{$(VER)};/;' \
+	    $(tmp)/usr/share/lintian/bin/spellintian
 	install -m 644 doc/lintianrc.example $(tmp)/etc/lintianrc
 
 profiles: $(profiles);
