In Salsa CI, show failed Lintian jobs when warning tags appear.
At the moment, the standard CI pipeline offers only some customization. For
Lintian jobs, we would prefer '--fail-on error,warning,info,pedantic'. Such
fine control, however, is not yet available.

For the time being, this enables failures on warnings as described here:

    https://salsa.debian.org/salsa-ci-team/pipeline#customizing-lintian

Gbp-Dch: ignore

--- a/debian/salsa-ci.yml
+++ b/debian/salsa-ci.yml
@@ -13,3 +13,6 @@ build-buster-backports:
     RELEASE: 'buster-backports'
   extends: .build-package
   allow_failure: true
+
+variables:
+  SALSA_CI_LINTIAN_FAIL_WARNING: 1
