--- a/debian/tests/control
+++ b/debian/tests/control
@@ -36,8 +36,8 @@ Depends:
  mingw-w64-tools,
  pkg-js-tools,
  pkg-php-tools,
- python2,
- python-all-dev,
+ python3,
+ python3-dev,
  python3-numpy,
  quilt,
  uglifyjs,
