--- a/t/recipes/checks/debhelper/debhelper-override-typos/build-spec/debian/rules
+++ b/t/recipes/checks/debhelper/debhelper-override-typos/build-spec/debian/rules
@@ -9,8 +9,8 @@ override_dh_instakk:
  override_dh_installcrons:
 override_dh_install_examples:
 override_dh_install_changelogs : # Extra space
-override_dh_perls override_dh_python2 : # Bad then good
-override_dh_python2 override_dh_perls : # Good then bad
+override_dh_perls override_dh_python3 : # Bad then good
+override_dh_python3 override_dh_perls : # Good then bad
 override_dh_instakk override_dh_install_examples : # Both broken, with space
 foo override_dh_installdebs bar override_dh_installxmlcatalog: # combining regular and overrides
 
@@ -34,10 +34,10 @@ override_dh_install :
  override_dh_install: #
 prefix_override_dh_gconfs:
 override_dh_will_never_exist:
-override_dh_python2 override_dh_perl :
+override_dh_python3 override_dh_perl :
 override_dh_auto_configure-% override_dh_auto_install-%:
 foo override_dh_installdeb bar override_dh_installxmlcatalogs: # combining regular and overrides
-override_dh_install: $(PY3VERS:%=install-python%) $(PY2VERS:%=install-python%)
+override_dh_install: $(PY3VERS:%=install-python%)
 # override_dh_instal: would be a typo, but in a comment it doesn't matter
 execute_after_dh_install:
 execute_before_dh_install:
