Also decode HTML5 entities in plain output; add libhtml-html5-entities-perl to d/control.
The entity &lowbar; for underscores was not decoded by the standard module
HTML::Entities. The entity features prominently in Markdown texts, however,
because the underscore there indicates italic content.

Due to the use of Markdown in tag descriptions, the &lowbar; entity
unfortunately appears there quite often.

--- a/debian/control
+++ b/debian/control
@@ -47,6 +47,7 @@ Depends:
  libfile-basedir-perl,
  libfile-find-rule-perl,
  libfont-ttf-perl,
+ libhtml-html5-entities-perl,
  libhtml-parser-perl,
  libipc-run3-perl,
  libjson-maybexs-perl,
