--- a/debian/rules
+++ b/debian/rules
@@ -35,11 +35,7 @@ override_dh_install:
 # some manual work
 	echo "Setting LINTIAN_VERSION to $(VER)"
 	$(PERL) -p -i -e 's/my \$$LINTIAN_VERSION;/my \$$LINTIAN_VERSION = q{$(VER)};/;' \
-	    $(tmp)/usr/share/lintian/bin/lintian
-	$(PERL) -p -i -e 's/my \$$LINTIAN_VERSION;/my \$$LINTIAN_VERSION = q{$(VER)};/;' \
-	    $(tmp)/usr/share/lintian/bin/lintian-info
-	$(PERL) -p -i -e 's/my \$$LINTIAN_VERSION;/my \$$LINTIAN_VERSION = q{$(VER)};/;' \
-	    $(tmp)/usr/share/lintian/bin/spellintian
+	    $(tmp)/usr/share/lintian/bin/*
 
 profiles: $(profiles);
 
