--- a/t/recipes/checks/init.d/legacy-scripts/build-spec/debian/control.in
+++ b/t/recipes/checks/init.d/legacy-scripts/build-spec/debian/control.in
@@ -3,7 +3,7 @@ Section: interpreters
 Priority: optional
 Maintainer: Lintian Maintainers <lintian-maint@debian.org>
 Uploaders: Jeroen van Wolfelaar <jeroen@wolffelaar.nl>, Marc 'HE' Brockschmidt <he@debian.org>
-Build-Depends-Indep: python (>= 2.3), python (<< 2.4), dpatch
+Build-Depends-Indep: dpatch
 Standards-Version: 3.2.1
 
 Package: scripts
